k8s-resource/day2/ing-multi-path.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ing-nginx
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: test.ibm.com
    http:
      paths:
      - path: /s1
        backend:
          serviceName: ing-nginx
          servicePort: 80
      - path: /s2
        backend:
          serviceName: ing-nginx
          servicePort: 80
